--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,7 @@
           },
           "configurations": {
             "production": {
+              "serviceWorker": "ngsw-config.json",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environments.ts",
